fix example name

--- a/.github/workflows/build-arduino.yml
+++ b/.github/workflows/build-arduino.yml
@@ -23,7 +23,7 @@ jobs:
             - name: esp8266:esp8266
               source-url: https://arduino.esp8266.com/stable/package_esp8266com_index.json
           sketch-paths: |
-            - examples/simple
+            - examples/simple-esp8266
           libraries: |
             - name: WiFiPrinter
               source-path: ./
